<resources>
    <string name="app_name">CUSD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="introduction_blurb">In order to support the success of all Chandler Unified School
        District (CUSD) students, the departments of Equity &amp; Inclusion and Counseling &amp; Social Services
        will host the inaugural summer educational equity symposium - Breaking Barriers for Excellence.
        This two-day event seeks to build the capacity of faculty and staff. Members of the CUSD community
        will explore:
\n\n Culturally relevant pedagogy
\n Suicide awareness and prevention
\n Adverse Childhood Experiences (ACEs)
\n Implicit and unconscious bias
\n Collaboration between schools and communities, and
\n A host of socio-emotional-learning and instructional strategies.
\n\n The professional development will allow faculty and staff to be immersed in learning with the goal
of transforming CUSD in meeting our Journey 2025 strategic plan. The two-day symposium invites thought
leaders (national and local) and CUSD faculty to create a space for \"courageous conversations\". The space
will allow educators to build a deeper understanding of our diverse learning community, explore best practices
in meeting the varied learning needs of our students, and fulfill the promise to our parents.</string>
    <string name="day1schedule"><b>7:30 AM</b>
    \n Welcome
    \n Room: Auditorium
        \n \n <b>8:00 AM</b>
        \n Keynote: Dr. Angelina Castagno - The Price of Nice: How Niceness Reinforces Educational Inequity
        \n Room: Auditorium
        \n \n <b>9:15 AM</b>
        \n CUSD Leadership Track - Unpacking the Keynote with Dr. Castagno
        \n Room: Cafeteria
        \n \n <b>9:15 AM</b>
        \n Breakout Session 1
        \n Room: Various
        \n \n <b>10:30 AM</b>
        \n Breakout Session 2
        \n Room: Various
        \n \n <b>11:30</b>
        \n Lunch
        \n Room: Cafeteria
        \n \n <b>12:30 PM</b>
        \n Keynote: Marcia Stanton - Understanding ACEs and Their Impact on Learning, Development and Behavior in School
        \n Room: Auditorium
        \n \n <b>1:45 PM</b>
        \n Teacher Equity Leadership Track - Unpacking the Keynote with Dr. Castagno
        \n Room: Cafeteria
        \n \n <b>1:45 PM</b>
        \n Breakout Session 3
        \n Room: Various
        \n \n <b>3:00 PM</b>
        \n TED Talk Parent Panel - Stories Are Important: Let Me Tell You About My Child/Children
        \n Room: Auditorium
    </string>
    <string name="day1"><b>Day 1</b></string>
    <string name="day2"><b>Day 2</b></string>
    <string name="day2schedule"><b>7:30 AM</b>
    \n Welcome
    \n Room: Auditorium
    \n \n <b>8:00 AM</b>
    \n Keynote: Dr. Tyrone Howard - Educating and Supporting Boys and Young Men of Color
    \n Room: Auditorium
    \n \n <b>9:15 AM</b>
    \n CUSD Leadership Track - Unpacking the Keynote with Dr. Howard
    \n Room: Cafeteria
    \n \n <b>9:15 AM</b>
    \n Breakout Session 1
    \n Room: Various
    \n \n <b>10:30 AM</b>
    \n Breakout Session 2
    \n Room: Various
        \n \n <b>11:30 AM</b>
        \n Lunch
        \n Cafeteria
        \n \n <b>12:30 PM</b>
        \n Keynote: Dr. William De La Cruz - Deconstructing our Blindspots - Examining the Role of Bias (Unconscious and Conscious) and its Implications for Educators
        \n Room: Auditorium
        \n \n <b>1:45 PM</b>
        \n CUSD Leadership Track - Unpacking the Keynote with Dr. De La Cruz
        \n Room: Cafeteria
        \n \n <b>1:45 PM</b>
        \n Breakout Session 3
        \n Room: Various
        \n \n <b>3:00 PM</b>
        \n Student Voice Panel - Can we say something? We are really the experts about school and learning
        \n Room: Auditorium
    </string>
    <string name="keynotes"><b>Keynote Speakers</b></string>
    <string name="sessiondescr"><b>Session Descriptions</b></string>
    <string name="castagnoname">Dr. Angelina Castagno</string>
    <string name="castagnodescr"><b>The Price of Nice: How Niceness Perpetuates Educational Inequity</b>
    \n \n Despite their good intentions and the general Niceness among educators, most schools in the United States contribute to inequity every day.
        How does this happen? And what might be done about this paradox? The opening keynote will address these questions so that we can begin to examine our own
        role in patterned educational inequities, and specifically, how our Niceness may be getting in the way of our efforts to advance equity in our district.</string>
    <string name="stantonname">Maria Stanton MSW</string>
    <string name="stantondescr"><b>Understanding ACEs and Their Impact on Learning, Development and Behavior in School</b>
    \n \n In Arizona and across the US, educators are working to understand Adverse Childhood Experiences (ACEs) and their impact on learning and behavior.
        This presentation will include a brief overview of the groundbreaking ACEs Study and share ACE incidence data for Arizona children and youth: what the data
        tells us, why schools should care, and what we can do about it.</string>
    <string name="howardname">Tyrone C. Howard, Ph.D.</string>
    <string name="howarddescr"><b>Educating and Supporting Boys and Young Men of Color</b>
    \n \n This keynote examines the educational state of affairs for males of color in schools today, and offers recommendations, strategies, and approaches that
        practitioners and school leaders can take to assist them academically, socially, and emotionally.</string>
    <string name="cruzname">Dr.  William de la Cruz</string>
    <string name="cruzdescr"><b>Deconstructing our Blindspots - Examining the Role of Bias (Unconscious and Conscious) and its Implications
        for Educators</b>
        \n \n In the past 20 years, educational researchers have examined bias, (conscious and unconscious) and its role in shaping perceptions,
        engagement and expectations of students. When unexamined, bias can have implications far beyond the classroom. Thus, recognizing our bias through
        self-awareness is critical for teaching a diverse student body. This keynote will address bias and its repercussion in K-12 settings.</string>
    <string name="sessiondescrdisclaimer">*Each separate session is available for all three Breakout Sessions on the day they are scheduled.</string>
    <string name="sessiondescr5"><b>Children\'s Play: Examining the Impact of Educators\' Conscious and Unconscious Biases on the Social,
    Emotional, and Cognitive Development of Children of African Descent</b>
    \n Latisha Barret
    \n \n <b>Cultivating Equitable Classrooms for Students in Special Education</b>
    \n Michelle Capriotti
    \n \n <b>Say This, Not That</b>
    \n Carla Rivera-Cruz
    \n \n <b>Providing Access - Relationships, Engagement, and Rigor for English Learners</b>
    \n Katherine English
    \n \n <b>Culturally Responsive Practices: Closing the Achievement and Discipline Gap</b>
    \n Yadira Flores
    \n \n <b>Creating Safe Spaces (How to Be an Ally to LGBTQ Youth)</b>
    \n GLSEN
    \n \n <b>Suicide Awareness and Prevention</b>
    \n Paula McCall
    \n \n <b>It Takes a Village!</b>
    \n Dr. Jeff McGee
    \n \n <b>Identifying, Understanding, and Treating Eating Disorders Among Adolescents</b>
    \n Stephanie Paige
    \n \n <b>Be a Warmer Demander: Utilizing Relationship, Relevance, Realness and Rigor</b>
    \n Johnna Pascador
    \n \n <b>Money to Memphis</b>
    \n John Prothro
    \n \n <b>Inclusiveness with LGBTQ+ Students</b>
    \n Kinsey Welsh
    \n \n <b>Cultural Humidity | Equity for Native American Students</b>
    \n Rowdy Duncan </string>
    <string name="sessiondescr6"><b>Reel Indian? Examining the effects of Indigenous Media Representation and its Implication for K-12 Education</b>
    \n Mina Bhagdev
    \n \n <b>The Wellness in You!</b>
    \n Crystal Blackwell
    \n \n <b>Trauma Informed Practices in Education</b>
    \n Carolyn Contreras
    \n \n <b>Boxing in Our Future with Labels</b>
    \n Jasmine Davis
    \n \n <b>Building LGBTQ-Inclusive Elementary Schools: Ready, Set, Respect!</b>
    \n GLSEN
    \n \n <b>The Classroom Teacher\'s Impact on a Student\'s Life Story</b>
    \n Leslie Hicks
    \n \n <b>Non-Suicidal Self-Injury: Understanding and Response</b>
    \n Paula McCall
    \n \n <b>Closing the Achievement Gap: Understanding Classroom Life Through Exploratory Practice</b>
    \n Melanie Mello
    \n \n <b>Not Just About Budgeting: How Participatory Democracy Deepens Civic Engagement and Strengthens School Communities</b>
    \n Sarah Sacco
    \n \n <b>A Dream Deferred</b>
    \n Russell Tribby
    \n \n <b>Building Educators Cultural Capacity about Native American History and Students in Arizona</b>
    \n Leticia Velarde
    \n \n <b>Trauma Informed Educators</b>
    \n Lee Underwood
    \n \n <b>Recruitment and Retention of Non-Traditional (Gender) CTE Students</b>
    \n Tim Wernette</string>
    <string name="junefifth"><b>June 5th</b></string>
    <string name="junesixth"><b>June 6th</b></string>
    <string name="breakoutsessions">Breakout Session Schedules
    \n 9:15 AM - 10:15 AM
    \n 10:30 AM - 11:30 AM
    \n 1:45 PM - 2:45 PM</string>
    <string name="linktosite">Click to see more about these speakers</string>
    <string name="feedblurb"><b>Feedback on your experience here at the symposium is appreciated!</b></string>
    <string name="survey1">Feedback for the symposium on June 5th</string>
    <string name="survey2">Feedback for the symposium on June 6th</string>
    <string name="survey3">Feedback for the overall experience of June 5th</string>
    <string name="survey4">Feedback for the overall experience of June 6th</string>
</resources>